--- a/src/main/resources/snaked/view/GameBoard.fxml
+++ b/src/main/resources/snaked/view/GameBoard.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.controller.GameBoardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.controller.GameBoardController">
    <children>
       <ImageView fitHeight="40.0" fitWidth="35.0" layoutX="142.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -27,16 +27,7 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <GridPane layoutX="15.0" layoutY="60.0" prefHeight="326.0" prefWidth="571.0" style="-fx-background-color: #323838;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <GridPane fx:id="grid" layoutX="15.0" layoutY="60.0" prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: #323838;">
       </GridPane>
       <ImageView fitHeight="40.0" fitWidth="35.0" layoutX="18.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
