--- a/src/main/resources/snaked/view/GameOver.fxml
+++ b/src/main/resources/snaked/view/GameOver.fxml
@@ -27,7 +27,7 @@
                            </image>
                         </ImageView>
                      </graphic></Label>
-                  <Label fx:id="gameOverHighscore" prefHeight="36.0" prefWidth="100.0" text="0000">
+                  <Label fx:id="gameOverHighScore" prefHeight="36.0" prefWidth="100.0" text="0000">
                      <graphic>
                         <ImageView fitHeight="42.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -39,7 +39,7 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <Label fx:id="gameOverScore" prefHeight="36.0" prefWidth="100.0" text="00000">
+                  <Label fx:id="gameOverCurrentScore" prefHeight="36.0" prefWidth="100.0" text="00000">
                      <graphic>
                         <ImageView fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                            <image>
