--- a/src/main/resources/snaked/view/scoreboard.fxml
+++ b/src/main/resources/snaked/view/scoreboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,23 +15,23 @@
             <Font name="System Bold Italic" size="36.0" />
          </font>
       </Text>
-      <Text layoutX="202.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="1st : &lt;insert point&gt; pts">
+      <Text layoutX="255.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="1st :">
          <font>
             <Font size="18.0" />
          </font></Text>
-      <Text layoutX="198.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="2nd : &lt;insert point&gt; pts">
+      <Text layoutX="251.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="2nd :">
          <font>
             <Font size="18.0" />
          </font></Text>
-      <Text layoutX="200.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="3rd : &lt;insert point&gt; pts">
+      <Text layoutX="253.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="3rd :">
          <font>
             <Font size="18.0" />
          </font></Text>
-      <Text layoutX="201.0" layoutY="309.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="5th : &lt;insert point&gt; pts">
+      <Text layoutX="253.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="5th :">
          <font>
             <Font size="18.0" />
          </font></Text>
-      <Text layoutX="200.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="4th : &lt;insert point&gt; pts">
+      <Text layoutX="253.0" layoutY="299.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="4th :">
          <font>
             <Font size="18.0" />
          </font></Text>
@@ -52,5 +53,35 @@
             <Image url="@/snaked/Icons/scoreboardButton.png" />
          </image>
       </ImageView>
+      <Label fx:id="highScores" alignment="TOP_LEFT" layoutX="300.0" layoutY="116.0" prefHeight="265.0" prefWidth="32.0" text="0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Text layoutX="330.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="pts">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="330.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="pts">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="330.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="pts">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="330.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="pts">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="330.0" layoutY="353.0" strokeType="OUTSIDE" strokeWidth="0.0" text="pts">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
