--- a/src/main/resources/snaked/view/GameBoard.fxml
+++ b/src/main/resources/snaked/view/GameBoard.fxml
@@ -24,7 +24,7 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <GridPane fx:id="grid" layoutX="50.0" layoutY="60.0" prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: #323838;">
+      <GridPane fx:id="grid" layoutX="50.0" layoutY="60.0" prefHeight="600.0" prefWidth="600.0">
       </GridPane>
       <ImageView fitHeight="40.0" fitWidth="35.0" layoutX="18.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
